# swf-parser

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE.md  README.md  update-submodules.sh
.github/workflows/: check-rs.yml  check-ts.yml
docs/: basic-data-types.md  grammar.md  swf-header.md
docs/avm1/: actions-index.md
docs/avm1/actions/: add2.md  and.md  define-function2.md  go-to-label.md  wait-for-frame.md
docs/tags/: define-morph-shape.md
rs/: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
rs/fuzz/: Cargo.toml
rs/fuzz/fuzz_targets/: movie.rs  swf.rs  tag.rs
rs/src/: lib.rs  main.rs  state.rs  stream_buffer.rs
rs/src/complete/: base.rs  button.rs  display.rs  gradient.rs  image.rs  mod.rs  morph_shape.rs  movie.rs  shape.rs  sound.rs  tag.rs  text.rs  video.rs
rs/src/parsers/: basic_data_types.rs  button.rs  display.rs  gradient.rs  header.rs  image.rs  morph_shape.rs  movie.rs  shape.rs  sound.rs  tags.rs  text.rs  video.rs
rs/src/streaming/: basic_data_types.rs  decompress.rs  mod.rs  movie.rs  parser.rs  tag.rs
rs/src/streaming/parser/: deflate.rs  lzma.rs  mod.rs  simple.rs
swf-parser.rs/: Cargo.toml
swf-parser.rs/src/: ast.rs  errors.rs  lib.rs  main.rs  state.rs  tags.rs
swf-parser.rs/src/fixed_point/: fixed_point.rs
swf-parser.rs/src/parsers/: avm1.rs  basic_data_types.rs  button.rs  display.rs  gradient.rs  header.rs  image.rs  morph_shape.rs  movie.rs  shape.rs  shapes.rs  sound.rs  swf_file.rs  swf_header.rs  swf_tags.rs  tags.rs  text.rs
swf-parser.ts/: .gitignore  .gitmodules  .npmignore  README.md  gulpfile.js  gulpfile.ts  package-lock.json  package.json  tsconfig.json
swf-parser.ts/src/lib/: index.ts  integer-names.ts  parse-context.ts  parse-result.ts  slice.ts  stream.ts  swf-file.ts  tags.ts
swf-parser.ts/src/lib/ast/: compression-method.ts  label.ts  rect.ts  rgb.ts  rgba.ts  scene.ts  swf-file.ts  swf-header.ts  swf-signature.ts  swf-tag-type.ts  swf-tag.ts
swf-parser.ts/src/lib/errors/: incomplete-stream.ts
swf-parser.ts/src/lib/fixed-point/: fixed-point.ts  fixed16p16.ts  fixed8p8.ts  type.ts  ufixed16p16.ts  ufixed8p8.ts
swf-parser.ts/src/lib/parsers/: avm1.ts  basic-data-types.ts  button.ts  display.ts  gradient.ts  header.ts  image.ts  morph-shape.ts  movie.ts  shape.ts  shapes.ts  sound.ts  swf-file.ts  swf-tags.ts  tags.ts  text.ts
swf-parser.ts/src/main/: main.ts
swf-parser.ts/src/test/: _utils.ts  stream.spec.ts
swf-parser.ts/src/test/parsers/: _utils.ts  rect.spec.ts  stream.spec.ts  swf-header.spec.ts
test/: build-test.sh  test.js  test.json  test.py
test/end-to-end/: .gitignore
test/end-to-end/blank/: blank.expected.json  blank.swf  expected.json  meta.json
test/end-to-end/hello-world/: expected.json  hello-world.expected.json  main.swf  meta.json  test.json
test/end-to-end/homestuck-beta/: expected.json  main.swf  meta.json
test/end-to-end/hre-flash8/: expected.json  main.flash8.expected.json  main.swf
test/end-to-end/morph-rotating-square/: expected.json
test/end-to-end/morph-segment-type/: expected.json
test/end-to-end/mt-hf-game/: main.swf
test/end-to-end/squares/: expected.json  squares.expected.json  squares.html  squares.swf
test/end-to-end/squares/squares/: DOMDocument.xml  PublishSettings.xml
test/end-to-end/triangle/: expected.json  main.swf  meta.json
test/parsers/: rect.json  swf-file.json  swf-header.json  uint32-leb128.json
test/parsers/tags/: define-sprite.json  place-object2.json  place-object3.json  tag.json
tests/local-tags/examples/show-frame/: value.json
tests/local-tags/raw/empty-clip-actions-string/: input.bytes  value.json
tests/local-tags/raw/incomplete-bitmap/: input.bytes  value.json
tests/local-tags/raw/incomplete-bits-lossless/: input.bytes  value.json
tests/local-tags/raw/invalid-button-cond-action-string/: input.bytes  value.json
tests/local-tags/raw/invalid-cap-style/: input.bytes  value.json
tests/local-tags/raw/invalid-csm-text-settings/: input.bytes  value.json
tests/local-tags/raw/invalid-define-bits-jpeg2-type/: input.bytes  value.json
tests/local-tags/raw/invalid-define-font-offset/: input.bytes  value.json
tests/local-tags/raw/invalid-define-font2-offset/: input.bytes  value.json
tests/local-tags/raw/invalid-define-text-index-bits-and-advance-bits/: input.bytes  value.json
tests/local-tags/raw/invalid-gif-header/: input.bytes  value.json
tests/local-tags/raw/invalid-gradient-flags/: input.bytes  value.json
tests/local-tags/raw/invalid-image-data-size/: input.bytes  value.json
tests/local-tags/raw/invalid-jpeg-data/: input.bytes  value.json
tests/local-tags/raw/invalid-key-press-code/: input.bytes  value.json
tests/local-tags/raw/invalid-morph-gradient/: input.bytes  value.json
tests/local-tags/raw/invalid-video-deblocking/: input.bytes  value.json
tests/local-tags/raw/jpeg-soi-only/: input.bytes  value.json
tests/local-tags/raw/missing-morph-shape-end-record/: input.bytes  value.json
tests/local-tags/raw/non-utf8-string/: input.bytes  value.json
tests/local-tags/raw/unknown-audio-codec/: input.bytes  value.json
tests/local-tags/raw/unknown-grid-fitting/: input.bytes  value.json
tests/local-tags/raw/unknown-tag-code-and-empty-body/: input.bytes  value.json
tests/local-tags/raw/unmatched-morph-shape-record-pair/: input.bytes  value.json
tests/tags/: README.md  build.js
tests/tags/define-sprite/small-sprite-with-avm1-stop/: input.bytes  output.bytes  value.json
tests/tags/do-action/stop/: input.bytes  output.bytes  value.json
tests/various/: .gitignore  README.md  build.js
tests/various/header/blank/: input.bytes  (+1 more)
ts/: .editorconfig  .eslintrc.json  .gitignore  .yarnrc.yml  README.md  gulpfile.ts  package.json  tsconfig.json
ts/src/lib/: concat-bytes.ts  index.mts  index.ts  tsconfig.json
ts/src/main/: main.mts  main.ts  tsconfig.json
ts/src/test/: meta.mts  movie-from-bytes.spec.ts  movies.spec.mts  movies.spec.ts  tags.spec.mts  tags.spec.ts  tsconfig.json  utils.mts  utils.ts  various.spec.mts  various.spec.ts
(+128 files in other folders)
