[package]
name = "swf-parser"
version = "0.12.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "SWF parser"
documentation = "https://github.com/open-flash/swf-parser"
homepage = "https://github.com/open-flash/swf-parser"
repository = "https://github.com/open-flash/swf-parser"
readme = "./README.md"
keywords = ["parser", "swf", "flash"]
license = "AGPL-3.0-or-later"
edition = "2018"

[badges]
travis-ci = { repository = "open-flash/swf-parser", branch = "master" }

[lib]
name = "swf_parser"
path = "src/lib.rs"

[dependencies]
half = "^1.6.0"
inflate = "^0.4.5"
lzma-rs = "^0.1.3"
memchr = "^2.3.3"
nom = "^5.1.2"
swf-fixed = "^0.1.5"
swf-types = { version = "^0.12.0", default-features = false }

[dev-dependencies]
serde = "^1.0.115"
serde_json_v8 = "^0.0.1"
swf-types = { version = "^0.12.0", default-features = true }
test-generator = "^0.3.0"

# [replace]
# "swf-types:0.9.0" = { git="https://github.com/open-flash/swf-types.git", rev = "524f19adc098d83900e94bbe693887a63b50786d" }

# When testing larger files, increasing `opt-level` provides a significant speed-up.
# [profile.test]
# opt-level = 2

[workspace]
members = ["bin"]
