[package]
name = "swf-parser"
version = "0.13.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "SWF parser"
documentation = "https://docs.rs/swf-parser"
homepage = "https://github.com/open-flash/swf-parser"
repository = "https://github.com/open-flash/swf-parser"
readme = "./README.md"
keywords = ["parser", "swf", "flash"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.60.0"

[lib]
name = "swf_parser"
path = "src/lib.rs"

[dependencies]
half = "1.8.2"
inflate = { version = "0.4.5", optional = true }
lzma-rs = { version = "0.2.0", optional = true }
memchr = "2.5.0"
nom = "7.1.1"
swf-fixed = "0.1.5"
swf-types = { version = "0.14.0", default-features = false }

[dev-dependencies]
serde = "1.0.137"
serde_json_v8 = "0.1.1"
swf-types = { version = "0.14.0", features = ["serde"] }
test-generator = "0.3.0"

[features]
default = ["deflate", "lzma"]
# Enable support for SWF movies compressed with declate
deflate = ["dep:inflate"]
# Enable support for SWF movies compressed with LZMA
lzma = ["dep:lzma-rs"]

# When testing larger files, increasing `opt-level` provides a significant speed-up.
# [profile.test]
# opt-level = 2

[workspace]
members = ["bin"]
