[package]
name = "swf-parser"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "SWF parser"
documentation = "https://github.com/open-flash/swf-parser"
homepage = "https://github.com/open-flash/swf-parser"
repository = "https://github.com/open-flash/swf-parser"
readme = "./README.md"
keywords = ["parser", "swf", "ast"]
license = "MIT"

[lib]
name = "swf_parser"
path = "src/lib.rs"

[[bin]]
name = "swf-parser"
path = "src/main.rs"

[dependencies]
lazy_static = "^0.2.8"
libflate = "^0.1.4"
nom = "^3.2.0"
num-traits = "^0.1.37"
regex = "^0.2.1"
rust-lzma = "^0.2.1"
serde = "^1.0.2"
serde_derive = "^1.0.2"
serde_json = "^1.0.1"
swf-tree = "^0.0.9"

[dependencies.ordered-float]
version = "^0.5.0"
features = ["serde"]

[replace]
"swf-tree:0.0.9" = { path = '../../swf-tree/swf-tree.rs' }
