[package]
name = "swf-parser"
version = "0.0.8"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "SWF parser"
documentation = "https://github.com/open-flash/swf-parser"
homepage = "https://github.com/open-flash/swf-parser"
repository = "https://github.com/open-flash/swf-parser"
readme = "./README.md"
keywords = ["parser", "swf", "ast"]
license = "MIT"

[lib]
name = "swf_parser"
path = "src/lib.rs"

[[bin]]
name = "swf-parser"
path = "src/main.rs"

[dependencies]
lazy_static = "^1.1.0"
libflate = "^0.1.18"
nom = "^4.1.1"
num-traits = "^0.2.6"
regex = "^1.0.5"
rust-lzma = "^0.3.0"
serde = "^1.0.80"
serde_derive = "^1.0.80"
serde_json = "^1.0.32"
swf-tree = "^0.0.18"
swf-fixed = "^0.1.0"

# [replace]
# "swf-tree:0.0.18" = { path = '../../swf-tree/swf-tree.rs' }
