[package]
name = "swf-parser"
version = "0.0.2"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "SWF parser"
documentation = "https://github.com/open-flash/swf-parser"
homepage = "https://github.com/open-flash/swf-parser"
repository = "https://github.com/open-flash/swf-parser"
readme = "./README.md"
keywords = ["parser", "swf", "ast"]
license = "MIT"

[lib]
name = "swf_parser"
path = "src/lib.rs"

[[bin]]
name = "swf-parser"
path = "src/main.rs"

[dependencies]
lazy_static = "1.0.0"
libflate = "0.1.14"
nom = "3.2.1"
num-traits = "0.1.43"
regex = "0.2.1"
rust-lzma = "0.2.1"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.11"
swf-tree = "0.0.14"

# [replace]
# "swf-tree" = { path = '../../swf-tree/swf-tree.rs' }
